# python-course

./: README.md
Estructuras_de_Flujo/: ciclos_definidos_for.ipynb  ciclos_indefinidos_while.ipynb  declaraciones_en_python.ipynb  pyproject.toml
Poetry/: README.md
Variables/: ciclos_definidos_for.ipynb  condicional_if.ipynb  dudas.ipynb  pyproject.toml  variables-conjuntos.ipynb  variables.ipynb  variables_conjuntos.ipynb  variables_diccionarios.ipynb  variables_listas.ipynb  variables_logicas.ipynb  variables_numéricas.ipynb  variables_texto.ipynb  variables_tuplas.ipynb
