[tool.poetry]
name = "variables"
version = "0.1.0"
description = ""
authors = ["Alejandro Aguayo-Ortiz <aaguayoo92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "3.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
